--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 		<!-- Servlet 3.0 이상에서 지원하는 mulitpart/form-data 파싱 기능을 위한 정의 -->
 		<multipart-config>
 			<!-- 임시파일이 저장될 폴더의 절대 경로만 가능 -->
-			<location>C:/Temp</location>
+			<location>C:/osstem/workspace/springframework-mini-project/src/main/webapp/resources/images</location>
 			<!-- 파일 크기가 10MB 이하만 허용(1024*1024*10) -->
 			<max-file-size>10485760</max-file-size>
 			<!-- multipart/form-data 전체 크기가 30MB 이하만 허용 -->
